--- a/.github/workflows/msys2-clang.yml
+++ b/.github/workflows/msys2-clang.yml
@@ -39,6 +39,6 @@ jobs:
         run: |
           mkdir build
           cd build
-          cmake  -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_BUILD_TYPE=${{ matrix.type }} ..
-          cmake --build .  --verbose
-          ctest -j4 --output-on-failure
+          cmake -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_BUILD_TYPE=${{ matrix.type }} ..
+          cmake --build . --verbose
+          ctest -j4 -V
