--- a/.github/workflows/msys2.yml
+++ b/.github/workflows/msys2.yml
@@ -40,5 +40,5 @@ jobs:
           mkdir build
           cd build
           cmake -DCMAKE_BUILD_TYPE=${{ matrix.type }} ..
-          cmake --build .  --verbose
-          ctest -j4 --output-on-failure
+          cmake --build . --verbose
+          ctest -j4 -V
