--- a/.github/workflows/ubuntu18.yml
+++ b/.github/workflows/ubuntu18.yml
@@ -15,6 +15,6 @@ jobs:
         run: |
           mkdir build &&
           cd build &&
-          cmake  -DFAST_DOUBLE_BENCHMARKS=ON  .. &&
+          cmake .. &&
           cmake --build . &&
-          ctest -j --output-on-failure
+          ctest -j -V
