--- a/.github/workflows/vs16-ninja-ci.yml
+++ b/.github/workflows/vs16-ninja-ci.yml
@@ -17,9 +17,8 @@ jobs:
         cmakeBuildType: Release
         buildWithCMake: true
         cmakeGenerator: VS16Win64
-        cmakeAppendedArgs:  -G Ninja
+        cmakeAppendedArgs: -G Ninja
         buildWithCMakeArgs: --config Release  
-
     - name: 'Run CTest'
-      run: ctest -C Release   --output-on-failure
+      run: ctest -C Release -V
       working-directory: "${{ github.workspace }}/../../_temp/windows"
