--- a/.github/workflows/msys2.yml
+++ b/.github/workflows/msys2.yml
@@ -41,4 +41,4 @@ jobs:
           cd build
           cmake -DCMAKE_BUILD_TYPE=${{ matrix.type }} ..
           cmake --build . --verbose
-          ctest -j4 -V
+          ctest -VV
