--- a/.github/workflows/vs17-clang-ci.yml
+++ b/.github/workflows/vs17-clang-ci.yml
@@ -30,8 +30,8 @@ jobs:
     - name: Run Release tests
       run: |
         cd build
-        ctest -C Release -V
+        ctest -C Release -VV
     - name: Run Debug tests
       run: |
         cd build
-        ctest -C Debug -V
+        ctest -C Debug -VV
