--- a/.github/workflows/vs16-ninja-ci.yml
+++ b/.github/workflows/vs16-ninja-ci.yml
@@ -8,6 +8,10 @@ jobs:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v3
+    - name: Setup cmake
+      uses: lukka/get-cmake@latest
+      with:
+        cmakeVersion: "~3.20.0"  # use most recent 3.20.x version
     - name: 'Run CMake with VS16'
       uses: lukka/run-cmake@v2
       with:
