--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,8 +6,9 @@ add_library(stlio STATIC
 add_library(stlio::stlio ALIAS stlio)
 
 target_include_directories(stlio
-    PRIVATE
-        ${PROJECT_SOURCE_DIR}/include
-    INTERFACE
-        $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
+  PRIVATE
+    ${PROJECT_SOURCE_DIR}/include
+  INTERFACE
+    $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/mathlib>
 )
